--- a/docker-airflow/docker-compose-CeleryExecutor.yml
+++ b/docker-airflow/docker-compose-CeleryExecutor.yml
@@ -3,6 +3,8 @@ services:
     redis:
         image: 'redis:5.0.5'
         # command: redis-server --requirepass redispass
+        ports:
+            - "6379:6379"
 
     postgres:
         image: postgres:9.6
