--- a/docker-airflow/workerconfig/airflow.cfg
+++ b/docker-airflow/workerconfig/airflow.cfg
@@ -1,11 +1,11 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
-# subfolder in a code repository. This path must be absolute. 任务执行文件存放位置
+# subfolder in a code repository. This path must be absolute.
 dags_folder = /usr/local/airflow/dags
 
 # The folder where airflow should store its log files
-# This path must be absolute 错误文件执行位置
-base_log_folder = /usr/local/airflow/logs
+# This path must be absolute
+base_log_folder =  /usr/local/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -66,14 +66,14 @@ default_timezone = utc
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
-executor = SequentialExecutor
+executor = CeleryExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
 # sql_alchemy_conn = sqlite:////tmp/airflow.db
 # sql_alchemy_conn = mysql://root:Hqp2themoon.@172.168.9.241/airflow
-
+sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@127.0.0.1:5432/airflow
 # The encoding for the databases
 sql_engine_encoding = utf-8
 
@@ -289,7 +289,7 @@ worker_class = sync
 access_logfile = /usr/local/airflow/logs/access.log
 
 # Log files for the gunicorn webserver. '-' means log to stderr.
-error_logfile =/usr/local/airflow/logs/error.log
+error_logfile = /usr/local/airflow/logs/error.log
 
 # Expose the configuration file in the web server
 expose_config = True
@@ -468,8 +468,9 @@ broker_url = redis://127.0.0.1:6379/1
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
- result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
-# postgresql+psycopg2://airflow:airflow@127.0.0.1:5432/airflow
+# result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
+result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
+
 # result_backend = db+mysql://aroot:Hqp2themoon.@172.168.9.241:3306/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
