--- a/docker-airflow/config/airflow.cfg
+++ b/docker-airflow/config/airflow.cfg
@@ -1,10 +1,12 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
-# subfolder in a code repository. This path must be absolute. 任务执行文件存放位置
+# subfolder in a code repository. This path must be absolute.
+# 任务执行文件存放位置
 dags_folder = /usr/local/airflow/dags
 
 # The folder where airflow should store its log files
-# This path must be absolute 错误文件执行位置
+# This path must be absolute
+# 错误文件执行位置
 base_log_folder = /usr/local/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
@@ -468,7 +470,7 @@ broker_url = redis://127.0.0.1:6379/1
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
- result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
+result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
 # postgresql+psycopg2://airflow:airflow@127.0.0.1:5432/airflow
 # result_backend = db+mysql://aroot:Hqp2themoon.@172.168.9.241:3306/airflow
 
