--- a/docker-airflow/airflow.cfg
+++ b/docker-airflow/airflow.cfg
@@ -5,7 +5,7 @@ dags_folder = /usr/local/airflow/dags
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder =  /usr/local/airflow/logs
+base_log_folder = /usr/local/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -62,18 +62,17 @@ hostname_callable = socket:getfqdn
 
 # Default timezone in case supplied date times are naive
 # can be utc (default), system, or any IANA timezone string (e.g. Europe/Amsterdam)
-default_timezone = utc
+default_timezone = Asia/Shanghai
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
-executor = CeleryExecutor
+executor = SequentialExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
 # sql_alchemy_conn = sqlite:////tmp/airflow.db
-# sql_alchemy_conn = mysql://root:Hqp2themoon.@172.168.9.241/airflow
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@127.0.0.1:5432/airflow
+
 # The encoding for the databases
 sql_engine_encoding = utf-8
 
@@ -286,10 +285,10 @@ workers = 4
 worker_class = sync
 
 # Log files for the gunicorn webserver. '-' means log to stderr.
-access_logfile = /usr/local/airflow/logs/access.log
+access_logfile = -
 
 # Log files for the gunicorn webserver. '-' means log to stderr.
-error_logfile = /usr/local/airflow/logs/error.log
+error_logfile = -
 
 # Expose the configuration file in the web server
 expose_config = True
@@ -347,7 +346,7 @@ hide_paused_dags_by_default = False
 page_size = 100
 
 # Use FAB-based webserver with RBAC feature
-rbac = False
+rbac = True
 
 # Define the color of navigation bar
 navbar_color = #007A87
@@ -460,7 +459,7 @@ worker_log_server_port = 8793
 # a sqlalchemy database. Refer to the Celery documentation for more
 # information.
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#broker-settings
-broker_url = redis://127.0.0.1:6379/1
+broker_url = redis://redis:6379/1
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
@@ -468,10 +467,7 @@ broker_url = redis://127.0.0.1:6379/1
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
-# result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
-result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
-
-# result_backend = db+mysql://aroot:Hqp2themoon.@172.168.9.241:3306/airflow
+result_backend = db+postgresql://airflow:airflow@postgres/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it ``airflow flower``. This defines the IP that Celery Flower runs on
@@ -578,7 +574,7 @@ print_stats_interval = 30
 # ago (in seconds), scheduler is considered unhealthy.
 # This is used by the health check in the "/health" endpoint
 scheduler_health_check_threshold = 30
-child_process_log_directory = /usr/local/airflow/logs
+child_process_log_directory = /usr/local/airflow/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
