--- a/docker-airflow/airflow_big/config/airflow.cfg
+++ b/docker-airflow/airflow_big/config/airflow.cfg
@@ -1,11 +1,13 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
+# 任务执行文件存放位置
 dags_folder = /usr/local/airflow/dags
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder =  /usr/local/airflow/logs
+# 错误文件执行位置
+base_log_folder = /usr/local/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -66,14 +68,14 @@ default_timezone = utc
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
-executor = CeleryExecutor
+executor = SequentialExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
 # sql_alchemy_conn = sqlite:////tmp/airflow.db
 # sql_alchemy_conn = mysql://root:Hqp2themoon.@172.168.9.241/airflow
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@127.0.0.1:5432/airflow
+
 # The encoding for the databases
 sql_engine_encoding = utf-8
 
@@ -114,16 +116,16 @@ sql_alchemy_schema =
 # The amount of parallelism as a setting to the executor. This defines
 # the max number of task instances that should run simultaneously
 # on this airflow installation
-parallelism = 32
+parallelism = 100
 
 # The number of task instances allowed to run concurrently by the scheduler
-dag_concurrency = 16
+dag_concurrency = 100
 
 # Are DAGs paused by default at creation
 dags_are_paused_at_creation = True
 
 # The maximum number of active DAG runs per DAG
-max_active_runs_per_dag = 16
+max_active_runs_per_dag = 100
 
 # Whether to load the examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
@@ -289,7 +291,7 @@ worker_class = sync
 access_logfile = /usr/local/airflow/logs/access.log
 
 # Log files for the gunicorn webserver. '-' means log to stderr.
-error_logfile = /usr/local/airflow/logs/error.log
+error_logfile =/usr/local/airflow/logs/error.log
 
 # Expose the configuration file in the web server
 expose_config = True
@@ -412,15 +414,15 @@ email_backend = airflow.utils.email.send_email_smtp
 # If you want airflow to send emails on retries, failure, and you want to use
 # the airflow.utils.email.send_email_smtp function, you have to configure an
 # smtp server here
-smtp_host = smtp.163.com
-smtp_starttls = False
+smtp_host = localhost
+smtp_starttls = True
 smtp_ssl = False
 # Example: smtp_user = airflow
-smtp_user = ahrli_c@163.com
+# smtp_user =
 # Example: smtp_password = airflow
-smtp_password = AXUBECLAOYRFPTWG
+# smtp_password =
 smtp_port = 25
-smtp_mail_from = ahrli_c@163.com
+smtp_mail_from = airflow@example.com
 
 [sentry]
 
@@ -468,9 +470,8 @@ broker_url = redis://127.0.0.1:6379/1
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
-# result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
 result_backend = db+postgresql://airflow:airflow@127.0.0.1:5432/airflow
-
+# postgresql+psycopg2://airflow:airflow@127.0.0.1:5432/airflow
 # result_backend = db+mysql://aroot:Hqp2themoon.@172.168.9.241:3306/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
