--- a/docker-airflow/airflow_big/workerconfig/airflow.cfg
+++ b/docker-airflow/airflow_big/workerconfig/airflow.cfg
@@ -412,15 +412,15 @@ email_backend = airflow.utils.email.send_email_smtp
 # If you want airflow to send emails on retries, failure, and you want to use
 # the airflow.utils.email.send_email_smtp function, you have to configure an
 # smtp server here
-smtp_host = smtp.163.com
-smtp_starttls = False
+smtp_host = localhost
+smtp_starttls = True
 smtp_ssl = False
 # Example: smtp_user = airflow
-smtp_user = ahrli_c@163.com
+# smtp_user =
 # Example: smtp_password = airflow
-smtp_password = AXUBECLAOYRFPTWG
+# smtp_password =
 smtp_port = 25
-smtp_mail_from = ahrli_c@163.com
+smtp_mail_from = airflow@example.com
 
 [sentry]
 
