--- a/docker-mysql/docker-mysql.yml
+++ b/docker-mysql/docker-mysql.yml
@@ -1,5 +1,4 @@
 # Use root/example as user/password credentials
-# https://hub.docker.com/_/mysql
 version: '3.1'
 
 services:
@@ -9,16 +8,13 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-        - "3306:3306"
-    volumes:
-        - ./config:/etc/mysql
-        - ./data:/var/lib/mysql
+      - 3306:3306
     environment:
       MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_ROOT_PASSWORD: example
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8082
+      - 8085:8080
